--- a/docs/_posts/2023-09-17-zuess.markdown
+++ b/docs/_posts/2023-09-17-zuess.markdown
@@ -7,4 +7,7 @@ categories: jekyll update
 
 ## Add images
 
-![Zeuss 3d5 and 2e2]({{ "assets/z3d5_z2e2.png" | relative_url }})
+![Zeuss 3d5 and 2e2]({{ "/assets/z3d5_z2e2.png" | relative_url }})
+
+
+![Alt text](/assets/z3d5_z2e2.png)
